# afterlife

./: .gitignore  Dockerfile  README.md  pyproject.toml
model/: model.safetensors  random_states_0.pkl
models/: dashing-vortex-8.safetensors  devoted-frost-5.safetensors  feasible-grass-10.safetensors  magic-vortex-9.safetensors  royal-flower-6.safetensors  sunny-mountain-7.safetensors
models/azure-valley-12/: config.json  model.safetensors
models/best_100seq/: model.safetensors  random_states_0.pkl
models/best_100seq_v2/: model.safetensors  random_states_0.pkl
notebooks/: train.ipynb
src/afterlife/: model.py
src/afterlife/cmds/: server.py
testdata/: dump-1731964073793.jsonl  dump-1731965089198.jsonl  dump-1731966752296.jsonl  dump-1732220377000.jsonl  dump-1732378712139.jsonl  dump-1732810236547.jsonl
